feat(api): bcrypt 및 nestjs-pino 추가 및 로거 설정

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,7 +27,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "bcrypt": "^6.0.0",
+    "nestjs-pino": "^4.5.0",
     "pg": "^8.17.2",
+    "pino-http": "^11.0.0",
     "prisma": "^7.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -35,6 +38,7 @@
   "devDependencies": {
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
