--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
@@ -32,6 +34,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "nestjs-pino": "^4.5.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.17.2",
     "pino-http": "^11.0.0",
     "prisma": "^7.3.0",
