feat(api): 로그인, JWT 및 로컬 인증 전략 추가

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -50,6 +50,8 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.5",
