--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,13 @@
     "endOfLine": "lf",
     "bracketSpacing": true,
     "jsxSingleQuote": false,
-    "plugins": ["prettier-plugin-tailwindcss"]
-  }
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "overrides": [
+        {
+            "files": ["*.css", "*.scss"],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
+}
