--- a/.prettierrc
+++ b/.prettierrc
@@ -16,6 +16,13 @@
             "options": {
                 "tabWidth": 2
             }
+        },
+        {
+            "files": ["*.json"],
+            "options": {
+                "tabWidth": 2,
+                "singleQuote": false
+            }
         }
     ]
 }
