--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,14 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.62.0",
+        "axios": "^1.7.9",
         "next": "16.1.3",
+        "next-intl": "^4.8.1",
         "react": "19.2.3",
         "react-dom": "19.2.3",
-        "react-icons": "^5.4.0"
+        "react-icons": "^5.4.0",
+        "zustand": "^5.0.2"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4",
