--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,13 +9,19 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.1.15",
         "@tanstack/react-query": "^5.62.0",
         "axios": "^1.7.9",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.563.0",
         "next": "16.1.3",
         "next-intl": "^4.8.1",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "react-icons": "^5.4.0",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss-animate": "^1.0.7",
         "zustand": "^5.0.2"
     },
     "devDependencies": {
